Made links relative, first ftp

--- a/public_html/about/index.html
+++ b/public_html/about/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+<!-- -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,14 +12,14 @@
     <title>Ultradia</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="/css/agency.css" rel="stylesheet">
-    <link href="/css/fonts.css" rel="stylesheet">
+    <link href="../css/agency.css" rel="stylesheet">
+    <link href="../css/fonts.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -68,7 +68,7 @@
 									<a href="#page-top"></a>
 								</li>
 								<li>
-									<a class="page-scroll chrona" href="/chrona/">Chrona</a>
+									<a class="page-scroll chrona" href="../chrona/">Chrona</a>
 								</li>
 								<li>
 <!--									<a class="page-scroll nav-sn" href="#">Blog</a>-->
@@ -124,7 +124,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="../img/about/1.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -138,7 +138,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="../img/about/2.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -152,7 +152,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="../img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -166,7 +166,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="../img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -180,7 +180,7 @@
                         </li>
                          <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/about/5.jpg" alt="">
+                                <img class="img-circle img-responsive" src="../img/about/5.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -194,7 +194,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="/img/about/6.jpg" alt="">
+                                <img class="img-circle img-responsive" src="../img/about/6.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -260,21 +260,21 @@
             <div class="row row-center">
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/zimin.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/zimin.png" class="img-responsive img-circle" alt="">
                         <h4>Zimin Hang</h4>
                         <p class="text-muted">Co-Founder &amp; CEO</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/ben.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/ben.png" class="img-responsive img-circle" alt="">
                         <h4>Ben Bronsther</h4>
                         <p class="text-muted">Co-Founder &amp; VP</p>
                     </div>
                 </div>
 								<div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/alan.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/alan.png" class="img-responsive img-circle" alt="">
                         <h4>Alan Sze</h4>
                         <p class="text-muted">Ultradian Core Engineer</p>
                     </div>
@@ -284,21 +284,21 @@
             <div class="row row-center">
             		<div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/blake.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/blake.png" class="img-responsive img-circle" alt="">
                         <h4>Blake Sakran</h4>
                         <p class="text-muted">Ultradian Core Engineer</p>
                     </div>
                 </div>
 								<div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/sam.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/sam.png" class="img-responsive img-circle" alt="">
                         <h4>Sam Casey</h4>
                         <p class="text-muted">Creative Director</p>
                     </div>
                 </div>
 								<div class="col-sm-3">
 									<div class="team-member">
-											<img src="/img/team/emily.png" class="img-responsive img-circle" alt="">
+											<img src="../img/team/emily.png" class="img-responsive img-circle" alt="">
 											<h4>Emily Skeels</h4>
 											<p class="text-muted">Director of PR</p>
 									</div>
@@ -307,21 +307,21 @@
             <div class="row row-center">
 								<div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/wade.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/wade.png" class="img-responsive img-circle" alt="">
                         <h4>Wade Zeng</h4>
                         <p class="text-muted">Engineering &amp; Business Development Partner</p>
                     </div>
                 </div>
                 <div class="col-sm-3">
                     <div class="team-member">
-                        <img src="/img/team/landon.png" class="img-responsive img-circle" alt="">
+                        <img src="../img/team/landon.png" class="img-responsive img-circle" alt="">
                         <h4>Landon Washam</h4>
                         <p class="text-muted">Controller</p>
                     </div>
                 </div>
 								<div class="col-sm-3">
 									<div class="team-member">
-											<img src="/img/team/shaun.png" class="img-responsive img-circle" alt="">
+											<img src="../img/team/shaun.png" class="img-responsive img-circle" alt="">
 											<h4>Shaun Vaidyan</h4>
 											<p class="text-muted">Web Development Specialist</p>
 									</div>
@@ -364,7 +364,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                        	<a href="http://eon.wustl.edu/linda.shtml" target="_blank">
-													<img src="/img/team/linda.png" class="img-responsive img-circle" alt="">
+													<img src="../img/team/linda.png" class="img-responsive img-circle" alt="">
 												</a>
                         <h4>Linda Larson-Prior, PhD</h4>
                         <p class="text-muted">Principal Investigator, Neuroimaging Laboratory, Washington University School of Medicine</p>
@@ -373,7 +373,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                        	<a href="http://eon.wustl.edu/eon/tracy.shtml" target="_blank">
-													<img src="/img/team/tracy.png" class="img-responsive img-circle" alt="">
+													<img src="../img/team/tracy.png" class="img-responsive img-circle" alt="">
 												</a>
                         <h4>Tracy Nolan</h4>
                         <p class="text-muted">Neuroimaging Laboratory, Washington University School of Medicine</p>
@@ -382,7 +382,7 @@
                 <div class="col-sm-3">
                     <div class="team-member">
                        	<a href="https://about.me/davidlrose" target="_blank">
-													<img src="/img/team/david.png" class="img-responsive img-circle" alt="">
+													<img src="../img/team/david.png" class="img-responsive img-circle" alt="">
 												</a>
                         <h4>David Rose, MA/Ed.M.</h4>
                         <p class="text-muted">MIT Media Lab, CEO Ditto Labs, Author “Enchanted Objects”</p>
@@ -393,7 +393,7 @@
 								<div class="col-sm-3">
                     <div class="team-member">
                        	<a href="https://www.linkedin.com/pub/gary-lauterbach/8a/404/22" target="_blank">
-													<img src="/img/team/gary.png" class="img-responsive img-circle" alt="">
+													<img src="../img/team/gary.png" class="img-responsive img-circle" alt="">
 												</a>
                         <h4>Gary Lauterbach</h4>
                         <p class="text-muted">Vice President, SleepMed</p>
@@ -402,7 +402,7 @@
 								<div class="col-sm-3">
                     <div class="team-member">
                        	<a href="http://www.fredsparks.com/" target="_blank">
-													<img src="/img/team/fredsparks.jpg" class="img-responsive img-circle" alt="">
+													<img src="../img/team/fredsparks.jpg" class="img-responsive img-circle" alt="">
 												</a>
                         <h4>Fred Sparks</h4>
                         <p class="text-muted">Product Development Specialist</p>
@@ -411,7 +411,7 @@
 								<div class="col-sm-3">
                     <div class="team-member">
                         <a href="https://vimeo.com/davidzucker" target="_blank">
-                        	<img src="/img/team/zucker.png" class="img-responsive img-circle" alt="">
+                        	<img src="../img/team/zucker.png" class="img-responsive img-circle" alt="">
 												</a>
                         <h4>David Zucker</h4>
                         <p class="text-muted">Videographer Extraordinaire</p>
@@ -520,22 +520,22 @@ print_r(php_ini_scanned_files());
 
 
     <!-- jQuery -->
-    <script src="/js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="/js/classie.js"></script>
-    <script src="/js/cbpAnimatedHeader.js"></script>
+    <script src="../js/classie.js"></script>
+    <script src="../js/cbpAnimatedHeader.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="/js/jqBootstrapValidation.js"></script>
-    <script src="/js/contact_me.js"></script>
+    <script src="../js/jqBootstrapValidation.js"></script>
+    <script src="../js/contact_me.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/js/agency.js"></script>
+    <script src="../js/agency.js"></script>
     
     <script type="text/javascript">
 			$(window).ready(function(){
