--- a/public_html/chrona/index.html
+++ b/public_html/chrona/index.html
@@ -12,16 +12,16 @@
     <title>Chrona</title>
 
     <!-- Bootstrap Core CSS --->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <!--<link href="/css/agency.css" rel="stylesheet">-->
-    <link href="/css/fonts.css" rel="stylesheet">
-    <link href="/css/chrona.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../slick/slick.css"/>
+    <!--<link href="../css/agency.css" rel="stylesheet">-->
+    <link href="../css/fonts.css" rel="stylesheet">
+    <link href="../css/chrona.css" rel="stylesheet">
+    <link rel="stylesheet" type="text../css" href="../slick/slick.css"/>
 
     <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text../css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -94,15 +94,15 @@
 								</li>
 <!--
 								<li class="ultradia">
-									<a class="page-scroll ultradia-hover" href="/about.html">About</a>
+									<a class="page-scroll ultradia-hover" href="../about.html">About</a>
 								</li>
 -->
-								<li>
-<!--									<a class="page-scroll nav-sn" href="#">Blog</a>-->
-								</li>
-             		<li>
+								<!--<li>-->
+									<!--<a class="page-scroll nav-sn" href="#">Blog</a>-->
+								<!--</li>-->
+             					<li>
 									<a class="page-scroll nav-sn" href="https://shop.trycelery.com/page/" data-celery="555969b65848f30b0053d4af" data-celery-version="v2">
-									<script async type="text/javascript" src="https://www.trycelery.com/js/celery.js"></script>
+										<script async type="text/javascript" src="https://www.trycelery.com/js/celery.js"></script>
 									Pre-Order | $169
 									</a>
 								</li>
@@ -113,13 +113,13 @@
 		<div class="bgTile"></div>
 		<section id="video">
 <!--			<div class="container container-vid">-->
-					<div id="coverimageforplayer"><img src="/img/video-cover.jpg" /></div>
+					<div id="coverimageforplayer"><img src="../img/video-cover.jpg" /></div>
 <!--
-					<div id="coverimageforplayer-2"><img src="/img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-3"><img src="/img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-4"><img src="/img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-5"><img src="/img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-6"><img src="/img/video-cover.jpg" /></div>
+					<div id="coverimageforplayer-2"><img src="../img/video-cover.jpg" /></div>
+					<div id="coverimageforplayer-3"><img src="../img/video-cover.jpg" /></div>
+					<div id="coverimageforplayer-4"><img src="../img/video-cover.jpg" /></div>
+					<div id="coverimageforplayer-5"><img src="../img/video-cover.jpg" /></div>
+					<div id="coverimageforplayer-6"><img src="../img/video-cover.jpg" /></div>
 -->
 		</section>
 <!--
@@ -212,7 +212,7 @@
         		<p>Chrona actively enhances the quality of sleep with sounds specific to where you are in your sleep cycle. No matter how strange your sleep patterns are, Chrona will adjust to your needs for better sleep. We’ve designed Chrona to compliment your high-performance lifestyle. Sleep better, without spending more time in bed.</p>
         	</div>
         	<div class="col-sm-4 full pull-right">
-        		<img class="pull-right" src="/img/chrona-logo-white.png" />
+        		<img class="pull-right" src="../img/chrona-logo-white.png" />
         	</div>
 				</div>
 			</div>
@@ -274,7 +274,7 @@
 			<div class="container">
 				<div class="row flex">
 					<div class="col-sm-6 full pull-left">
-						<img class="pull-left" src="/img/chrona-features.jpg" />
+						<img class="pull-left" src="../img/chrona-features.jpg" />
 					</div>
 					<div class="col-sm-6 full pull-right">
 						<p>Like Fitbit and other wearable trackers, Chrona tracks sleep based on movement. Instead of being attached to your wrist, Chrona is placed in your pillowcase, where it measures the movements of your head and torso.</p>
@@ -317,7 +317,7 @@
 						<p><span class="bold">Perfect Wake-Up</span> uses higher frequencies to help you enter a lighter state of sleep. When you’re relaxed with your eyes closed (ex. during meditation), your brain expresses the highest activity in the alpha range. Perfect Wake-Up uses sound in the same frequency range to prepare your mind to wake up.</p>
 					</div>
 					<div class="full no-pad">
-						<img class="pull-right" src="/img/chrona-sound.jpg" />
+						<img class="pull-right" src="../img/chrona-sound.jpg" />
 					</div>
 				</div>
 			</div>	
@@ -349,7 +349,7 @@
 			<div class="phone-container">
 				<div class="row flex-just">
 					<div class="flex-image full">
-						<img class="" src="/img/chrona-phone.png" />
+						<img class="" src="../img/chrona-phone.png" />
 					</div>
 					<div class="flex-text full">
 						<p class="headline">Smartphone Connected</p>
@@ -367,7 +367,7 @@
 						<p>With Chrona, there’s no need to change your bedtime routine. Simply insert Chrona into your pillowcase and sleep as usual. Set an alarm using the Chrona app for a refreshing morning with Perfect Wake-Up and Chrona’s gentle vibrating alarm.</p>
 					</div>
 					<div class="flex-image full no-pad">
-						<img class="pull-right" src="/img/Chrona-upgrade.jpg" />
+						<img class="pull-right" src="../img/Chrona-upgrade.jpg" />
 					</div>
 				</div>
 			</div>	
@@ -377,7 +377,7 @@
 			<div class="container-full">
 				<div class="row flex">
 					<div class="col-sm-7 full pull-left">
-						<img class="pull-left" src="/img/chrona-system.jpg" />
+						<img class="pull-left" src="../img/chrona-system.jpg" />
 					</div>
 					<div class="col-sm-5 full pull-right">
 						<p class="headline">The Chrona System</p>
@@ -479,10 +479,10 @@
 						<ul>
 							<li class="copyright"><em></em>Ultradia © 2015</li>
 							<li class="middot">·</li>
-							<li><a target="_blank" href="/about" title="Learn more about Ultradia">About Us</a></li>
+							<li><a target="_blank" href="../about" title="Learn more about Ultradia">About Us</a></li>
 <!--							<li> FAQ<a href="#" title="Frequently asked questions">FAQ</a></li>-->
 							<li><a target="_blank" href="https://chronasleep.com/about/#contact" title="Say hello">Contact Us</a></li>
-<!--							<li><a target="_blank" href="/careers" title="Work for us">Careers</a></li>-->
+<!--							<li><a target="_blank" href="../careers" title="Work for us">Careers</a></li>-->
 						</ul>
 					</div>
 					<div class="col-sm-2 left">
@@ -518,23 +518,23 @@
 		
 		
 	<!-- jQuery -->
-    <script src="/js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="/js/classie.js"></script>
-    <script src="/js/cbpAnimatedHeader.js"></script>
+    <script src="../js/classie.js"></script>
+    <script src="../js/cbpAnimatedHeader.js"></script>
     <script type="text/javascript" src="../slick/slick.min.js"></script>
 
     <!-- Contact Form JavaScript -->
-    <script src="/js/jqBootstrapValidation.js"></script>
-    <script src="/js/contact_me2.js"></script>
+    <script src="../js/jqBootstrapValidation.js"></script>
+    <script src="../js/contact_me2.js"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="/js/agency2.js"></script>
+    <script src="../js/agency2.js"></script>
     
 <!--
     <script type="text/javascript">
