--- a/public_html/careers/index.html
+++ b/public_html/careers/index.html
@@ -12,15 +12,15 @@
     <title>Chrona</title>
 
     <!-- Bootstrap Core CSS --->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <!--<link href="/css/agency.css" rel="stylesheet">-->
-    <link href="/css/fonts.css" rel="stylesheet">
+    <!--<link href=../ss/agency.css" rel="stylesheet">-->
+    <link href="../css/fonts.css" rel="stylesheet">
     <link href="../css/careers/nav.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -66,7 +66,7 @@
 						</li>
 	<!--
 						<li class="ultradia">
-							<a class="page-scroll ultradia-hover" href="/about.html">About</a>
+							<a class="page-scroll ultradia-hover" href=../bout.html">About</a>
 						</li>
 	-->
 						<li>
@@ -82,10 +82,10 @@
 				</div>
 			</div>
 		</nav>
-		This form allows you to upload a file to the server.<br>
-	<form action="getfile.php" method="post"><br>
-		Type (or select) Filename: <input type="file" name="uploadFile">
-		<input type="submit" value="Upload File">
-	</form>
+		<!--This form allows you to upload a file to the server.<br>-->
+		<!--<form action="getfile.php" method="post"><br>-->
+		<!--Type (or select) Filename: <input type="file" name="uploadFile">-->
+		<!--<input type="submit" value="Upload File">-->
+		<!--</form>-->
 	</body>
 </html>
