Updates to copy, pre-order price removal, color updates

--- a/chrona/index.html
+++ b/chrona/index.html
@@ -58,6 +58,7 @@
 	  ga('send', 'pageview');
 
 		</script>
+	<script src="//fast.eager.io/2kmdLfnqm2.js"></script>
 
 </head>
 
@@ -103,24 +104,16 @@
              					<li>
 									<a class="page-scroll nav-sn" href="https://shop.trycelery.com/page/" data-celery="555969b65848f30b0053d4af" data-celery-version="v2">
 										<script async type="text/javascript" src="https://www.trycelery.com/js/celery.js"></script>
-									Pre-Order | $169
+									Pre-Order!
 									</a>
 								</li>
               </ul>
             </div>
-					</div>
-			</nav>
-		<div class="bgTile"></div>
+		</div>
+	</nav>
+	<div class="bgTile"></div>
 		<section id="video">
-<!--			<div class="container container-vid">-->
 					<div id="coverimageforplayer"><img src="../img/video-cover.jpg" /></div>
-<!--
-					<div id="coverimageforplayer-2"><img src="../img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-3"><img src="../img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-4"><img src="../img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-5"><img src="../img/video-cover.jpg" /></div>
-					<div id="coverimageforplayer-6"><img src="../img/video-cover.jpg" /></div>
--->
 		</section>
 <!--
 		
@@ -208,8 +201,7 @@
         <div class="row flex">
         	<div class="col-sm-8 full pull-left">
         		<p class="headline">Sleep smarter, not longer</p>
-        		<p>Chrona is a thin memory foam insert that tracks and optimizes sleep using sound. Chrona turns your pillow into a smart pillow, bringing greater comfort and the benefits of emerging sleep research to your bed.</p>
-        		<p>Chrona actively enhances the quality of sleep with sounds specific to where you are in your sleep cycle. No matter how strange your sleep patterns are, Chrona will adjust to your needs for better sleep. We’ve designed Chrona to compliment your high-performance lifestyle. Sleep better, without spending more time in bed.</p>
+        		<p>Chrona turns your pillow into a Smartpillow, bringing greater comfort and the benefits of emerging sleep research to your bed. Chrona actively enhances the quality of your sleep with sounds specific to where you are in your sleep cycle. Chrona is designed to compliment your high-performance lifestyle: Sleep better, without spending more time in bed.</p>
         	</div>
         	<div class="col-sm-4 full pull-right">
         		<img class="pull-right" src="../img/chrona-logo-white.png" />
@@ -217,38 +209,7 @@
 				</div>
 			</div>
 		</section>
-		
-<!--
-		<section id="chrona-thunderclap">
-			<div class="container">
-				<div class="row">
-						<div class="col-sm-12 full thunderclap-container">
-							<a href="https://www.thunderclap.it/projects/24194-sleep-smarter-not-longer" target="_blank">
-								<div class="thunderclap">
-									<p class="tc-logo">Help Spread the Word!</p>
-									<p>Kickstarting April 16th!</p>
-								</div>
-							</a>
-						</div>
-					</div>
-          <div class="row">
-						<div class="col-xs-8">
-							<span class="follow-text">Follow us to get the latest updates!</span>
-						</div>
-						<div class="col-xs-3">
-							<ul class="list-inline social-buttons">
-								<li><a href="https://instagram.com/sleep_elite/" target="_blank"><i class="fa fa-instagram"></i></a>
-								</li>
-								<li><a href="https://twitter.com/chronasleep" target="_blank"><i class="fa fa-twitter"></i></a>
-								</li>
-								<li><a href="https://www.facebook.com/chronasleep" target="_blank"><i class="fa fa-facebook"></i></a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</section>
--->
+
 <!--
 		
 						++++++++++++:                                                                                                                             
@@ -277,8 +238,8 @@
 						<img class="pull-left" src="../img/chrona-features.jpg" />
 					</div>
 					<div class="col-sm-6 full pull-right">
-						<p>Like Fitbit and other wearable trackers, Chrona tracks sleep based on movement. Instead of being attached to your wrist, Chrona is placed in your pillowcase, where it measures the movements of your head and torso.</p>
-						<p>Chrona sends this data to your smartphone, where you’ll be able to see just how well you slept the night before. With our app, you’ll also be able to use Chrona as a smart alarm to wake you up with gentle vibrations. For advanced users, you’ll have full control of Chrona’s sleep optimization settings at the tips of your fingers. (We have plans to add IFTTT integration and functions to guide meditation, relaxation, and much much more!).</p>
+						<p>Instead of being attached to your wrist like other wearable trackers, Chrona is placed in your pillowcase, where it measures the movements of your head and torso. With the Chrona app, you’ll be able to see how well you slept and set Chrona's haptic alarm to wake you up without disturbing your partner. </p>
+
 					</div>
 				</div>
 			</div>	
@@ -312,8 +273,8 @@
 				<div class="row flex">
 					<div class="sound-text-width full pull-left">
 						<p class="headline">Sound Sleep</p>
-						<p>Chrona’s innovation comes from using sound to actively improve the quality of sleep. Deep Sleep Boost and Perfect Wake-up each use a different set of rhythmic beats to help you sleep better.</p>
-						<p><span class="bold">Deep Sleep Boost</span> uses low-frequency sounds to help you sleep more deeply. Sounds in the delta range can synchronize and boost deep sleep, which ongoing studies show to have benefits for memory and cognition.</p>
+						<p>Chrona’s uses research-tested sounds to actively improve the quality of sleep.</p>
+						<p><span class="bold">Deep Sleep Boost</span> uses low-frequency sounds to help you sleep more deeply. Sounds in the delta range can synchronize and boost deep sleep, which <a target="_blank" href=" http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4211398/">ongoing studies show to have benefits for memory and cognition.</a></p>
 						<p><span class="bold">Perfect Wake-Up</span> uses higher frequencies to help you enter a lighter state of sleep. When you’re relaxed with your eyes closed (ex. during meditation), your brain expresses the highest activity in the alpha range. Perfect Wake-Up uses sound in the same frequency range to prepare your mind to wake up.</p>
 					</div>
 					<div class="full no-pad">
@@ -353,7 +314,7 @@
 					</div>
 					<div class="flex-text full">
 						<p class="headline">Smartphone Connected</p>
-						<p>Optimize your sleep at the tips of your fingers. Chrona is operated completely through your smartphone. Set an alarm, play with sleep optimization settings, check your sleep score; or, just sync up to Chrona and let it work its magic.</p>
+						<p>Optimize your sleep at the tips of your fingers: set Chrona's haptic alarm, play with sleep optimization settings, check your sleep score...Or, just sync up to Chrona and let it work its magic.</p>
 					</div>
 				</div>
 			</div>	
@@ -381,8 +342,8 @@
 					</div>
 					<div class="col-sm-5 full pull-right">
 						<p class="headline">The Chrona System</p>
-						<p>Chrona uses an accelerometer to measure head and torso movement (same technology that fitness trackers use to measure wrist movement). Chrona’s Bluetooth SMART module safely transmits data between your pillow and smartphone. Your smartphone does most of the processing for Chrona, so you’ll be able to power Chrona for weeks with a single charge. Using Chrona’s accelerometer data, our app determines where you are in your sleep cycle, and then tells Chrona how to optimize your sleep (or when to wake you up).</p>
-						<p>Our design process is focused around comfort and ease-of-use. Chrona’s thin memory foam insert adds a layer of comfort without compromising the integrity of your pillow.</p>
+						<p>Chrona uses an accelerometer to measure your movements while you sleep. Its Bluetooth Low Energy module safely transmits data between your Smartpillow and smartphone. Chrona is energy-efficient, so you'll be able to power Chrona for over a week with a single charge.</p>
+						<p>Our design process is focused around comfort and ease-of-use. Chrona’s thin latex foam insert adds a layer of comfort and cooling, without compromising the integrity of your pillow. Sleep elite with Chrona tonight! Preorder at the top right corner of the page. Sign up for updates with email, Twitter, or Facebook below.</p>
 					</div>
 				</div>
 			</div>	
