team member updates

--- a/about/index.html
+++ b/about/index.html
@@ -282,27 +282,27 @@
                 
             </div>
             <div class="row row-center">
-            		<div class="col-sm-3">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img src="../img/team/blake.png" class="img-responsive img-circle" alt="">
                         <h4>Blake Sakran</h4>
                         <p class="text-muted">Ultradian Core Engineer</p>
                     </div>
                 </div>
-								<div class="col-sm-3">
+                <div class="col-sm-3">
                     <div class="team-member">
                         <img src="../img/team/sam.png" class="img-responsive img-circle" alt="">
                         <h4>Sam Casey</h4>
                         <p class="text-muted">Creative Director</p>
                     </div>
                 </div>
-								<div class="col-sm-3">
-									<div class="team-member">
-											<img src="../img/team/emily.png" class="img-responsive img-circle" alt="">
-											<h4>Emily Skeels</h4>
-											<p class="text-muted">Director of PR</p>
-									</div>
-								</div>
+                <div class="col-sm-3">
+                    <div class="team-member">
+                        <img src="../img/team/erin.png" class="img-responsive img-circle" alt="">
+                        <h4>Erin Kim</h4>
+                        <p class="text-muted">PR &amp; Events Director</p>
+                    </div>
+                </div>
             </div>
             <div class="row row-center">
 								<div class="col-sm-3">
