--- a/careers/index.html
+++ b/careers/index.html
@@ -9,83 +9,162 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Chrona</title>
+    <title>Ultradia Careers</title>
 
     <!-- Bootstrap Core CSS --->
     <link href="../css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <!--<link href=../ss/agency.css" rel="stylesheet">-->
     <link href="../css/fonts.css" rel="stylesheet">
-    <link href="../css/careers/nav.css" rel="stylesheet">
+	<link href="../css/careers/careers.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
+	<!-- Custom Fonts -->
     <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    
-    <!-- Facebook Conversion Code for key page views -->
 
 </head>
 
-<body id="page-top" class="index chrona-page-logo" data-spy="scroll" data-target=".navbar-fixed-top">
+<body id="page-top" class="index" data-spy="scroll" data-target=".navbar-fixed-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-			<div class="container-nav">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header page-scroll">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand page-scroll clearfix" href="#"></a>
-				</div>
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav ultradia-nav">
-						<li>
-							<a class="page-scroll" href="#features">Features</a>
-						</li>
-						<li>
-							<a class="page-scroll" href="#technology">Technology</a>
-						</li>
-						<li>
-							<a class="page-scroll" href="#press">Press</a>
-						</li>
-					</ul>
-					<ul class="nav navbar-nav navbar-right">
-						<li class="hidden">
-							<a href="#page-top"></a>
-						</li>
-	<!--
-						<li class="ultradia">
-							<a class="page-scroll ultradia-hover" href=../bout.html">About</a>
-						</li>
-	-->
-						<li>
-	<!--									<a class="page-scroll nav-sn" href="#">Blog</a>-->
-						</li>
-						<li>
-							<a class="page-scroll nav-sn" href="https://shop.trycelery.com/page/" data-celery="555969b65848f30b0053d4af" data-celery-version="v2">
-							<script async type="text/javascript" src="https://www.trycelery.com/js/celery.js"></script>
-							Pre-Order | $169
-							</a>
-						</li>
-					</ul>
-				</div>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-nav">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header page-scroll">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand page-scroll clearfix" href="#page-top"></a>
 			</div>
-		</nav>
-		<!--This form allows you to upload a file to the server.<br>-->
-		<!--<form action="getfile.php" method="post"><br>-->
-		<!--Type (or select) Filename: <input type="file" name="uploadFile">-->
-		<!--<input type="submit" value="Upload File">-->
-		<!--</form>-->
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav ultradia-nav">
+					<li>
+						<a class="page-scroll" href="../about/#about">About</a>
+					</li>
+					<li>
+						<a class="page-scroll" href="../about/#team">Team</a>
+					</li>
+					<li>
+						<a class="page-scroll" href="../about/#advisors">Collaborators</a>
+					</li>
+					<li>
+						<a class="page-scroll" href="../about/#contact">Contact</a>
+					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+
+					<li class="hidden">
+						<a href="#page-top"></a>
+					</li>
+					<li>
+						<a class="page-scroll chrona" href="../chrona/">Chrona</a>
+					</li>
+
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
+
+    <section id="hero-content">
+        <div class="hero-title">
+            <h1>Careers</h1>
+            <h4>We'd love your help in making Ultradia better than ever. Come join us!</h4>
+        </div>
+    </section>
+
+    <section id="traits">
+        <div class="traits-container">
+            <div class="trait">
+                <img src="../img/trait-create.png">
+                <div class="trait-text-container">
+                    <p class="trait-title">Create</p>
+                    <p class="trait-descriptor">
+                        We design, build, & optimize to bring meaningful product experiences to people around the world.
+                    </p>
+                </div>
+            </div>
+
+            <div class="trait">
+                <img src="../img/trait-learn.png">
+                <div class="trait-text-container">
+                    <p class="trait-title">Learn</p>
+                    <p class="trait-descriptor">
+                        Kindle your inner child and let curiosity take you to new heights.
+                    </p>
+                </div>
+            </div>
+
+            <div class="trait">
+                <img src="../img/trait-sleep.png">
+                <div class="trait-text-container">
+                    <p class="trait-title">Sleep</p>
+                    <p class="trait-descriptor">
+                        Work, challenge, and play so you can go to bed and dream with satisfaction.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="about-us">
+        <div class="sec-container">
+            <h2 class="about-title">What we're all about</h2>
+            <p>
+                Humans are the most amazing and important part of Ultradia. It takes an entire team working together to build something big and that begins with the commitment to grow and challenge each other as individuals. At Ultradia we work hard, we have a good time, we brainstorm constantly, and we love sleep. If that sounds like a good fit to you then we'd love to hear from you. Perhaps we'll be working together shortly and you can join us in our journey to the top.
+            </p>
+            <p>
+                If you don’t see any positions listed that fit your background, don't hesitate to contact us anyway. We’re always looking to connect with talented, like-minded people.
+            </p>
+        </div>
+    </section>
+
+    <section id="openings-header">
+        <div class="sec-container">
+            <h2>Open Positions</h2>
+        </div>
+    </section>
+
+    <section id="openings">
+        <div class="sec-container">
+            <div class="row">
+                <h2 class="position-type">Engineering</h2>
+            </div>
+            <div class="row">
+                <div class="position">
+                    <h4 class="position-title">Android Developer</h4>
+                    <p class="position-description">
+                        We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
+                    </p>
+                    <button class="view-more">View More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- jQuery -->
+    <script src="../js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="../js/classie.js"></script>
+    <script src="../js/cbpAnimatedHeader.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="../js/jqBootstrapValidation.js"></script>
+    <script src="../js/contact_me.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="../js/agency.js"></script>
+
+
 	</body>
 </html>
