removed ! form pre-order in nav

--- a/chrona/index.html
+++ b/chrona/index.html
@@ -104,7 +104,7 @@
              					<li>
 									<a class="page-scroll nav-sn" href="https://shop.trycelery.com/page/" data-celery="555969b65848f30b0053d4af" data-celery-version="v2">
 										<script async type="text/javascript" src="https://www.trycelery.com/js/celery.js"></script>
-									Pre-Order!
+									Pre-Order
 									</a>
 								</li>
               </ul>
