careers page, open positions and footer

--- a/careers/index.html
+++ b/careers/index.html
@@ -143,9 +143,48 @@
                     </p>
                     <button class="view-more">View More</button>
                 </div>
+
+                <div class="position">
+                    <h4 class="position-title">Android Developer</h4>
+                    <p class="position-description">
+                        We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
+                    </p>
+                    <button class="view-more">View More</button>
+                </div>
+            </div>
+
+            <div class="row">
+                <h2 class="position-type">Engineering</h2>
+            </div>
+            <div class="row">
+                <div class="position">
+                    <h4 class="position-title">Android Developer</h4>
+                    <p class="position-description">
+                        We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
+                    </p>
+                    <button class="view-more">View More</button>
+                </div>
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="sec-container">
+            <div class="col-md-4 shrink">
+                <span class="copyright">&copy; Ultradia 2015</span>
+            </div>
+            <div class="col-md-4 shrink">
+                <ul class="list-inline social-buttons">
+                    <li><a href="https://www.linkedin.com/company/ultradia" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    </li>
+                    <li><a href="https://twitter.com/chronasleep" target="_blank"><i class="fa fa-twitter"></i></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/chronasleep" target="_blank"><i class="fa fa-facebook"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <!-- jQuery -->
     <script src="../js/jquery.js"></script>
