added position page and fixes to careers page per Zimin's request

--- a/careers/index.html
+++ b/careers/index.html
@@ -72,14 +72,16 @@
 	</nav>
 
     <section id="hero-content">
-        <div class="hero-title">
-            <h1>Careers</h1>
-            <h4>We'd love your help in making Ultradia better than ever. Come join us!</h4>
+        <div class="sec-container">
+            <div class="hero-title">
+                <h1>Careers</h1>
+                <h4>We'd love your help in making Ultradia better than ever. Come join us!</h4>
+            </div>
         </div>
     </section>
 
     <section id="traits">
-        <div class="traits-container">
+        <div class="traits-container clearfix">
             <div class="trait">
                 <img src="../img/trait-create.png">
                 <div class="trait-text-container">
@@ -109,6 +111,7 @@
                     </p>
                 </div>
             </div>
+            <div class="clearfix"></div>
         </div>
     </section>
 
@@ -141,26 +144,26 @@
                     <p class="position-description">
                         We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
                     </p>
-                    <button class="view-more">View More</button>
+                    <a href="position.html"><button class="view-more">View More</button></a>
                 </div>
 
-                <div class="position">
-                    <h4 class="position-title">Android Developer</h4>
-                    <p class="position-description">
-                        We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
-                    </p>
-                    <button class="view-more">View More</button>
-                </div>
+                <!--<div class="position">-->
+                    <!--<h4 class="position-title">Android Developer</h4>-->
+                    <!--<p class="position-description">-->
+                        <!--We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.-->
+                    <!--</p>-->
+                    <!--<button class="view-more">View More</button>-->
+                <!--</div>-->
             </div>
 
             <div class="row">
-                <h2 class="position-type">Engineering</h2>
+                <h2 class="position-type">Looking for something else?</h2>
             </div>
             <div class="row">
                 <div class="position">
-                    <h4 class="position-title">Android Developer</h4>
+                    <h4 class="position-title">Your Dream Job</h4>
                     <p class="position-description">
-                        We’re looking for an Android Engineer to help us build an application that transforms how millions of people discover and collect inspiration everyday. Working closely with the creative team, you’ll build beautiful Android apps for phones and tablets.
+                        If you don’t see any positions listed that fit your background, don't hesitate to contact us anyway. We’re always looking to connect with talented, like-minded people.
                     </p>
                     <button class="view-more">View More</button>
                 </div>
